# api/docs/swagger.json
@@ -57,11 +57,6 @@
         },
         "/v1/articles/chapter": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get article chapters",
                 "consumes": [
                     "application/json"
@@ -149,11 +144,6 @@
         },
         "/v1/articles/chapter/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get article chapter",
                 "consumes": [
                     "application/json"
@@ -301,11 +291,6 @@
         },
         "/v1/articles/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get articles by chapter id",
                 "consumes": [
                     "application/json"
@@ -456,11 +441,6 @@
         },
         "/v1/authors": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get authors",
                 "consumes": [
                     "application/json"
@@ -653,11 +633,6 @@
         },
         "/v1/blogs": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get publication categories",
                 "consumes": [
                     "application/json"
@@ -955,11 +930,6 @@
         },
         "/v1/blogs/{id}/publication": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get publications by category id",
                 "consumes": [
                     "application/json"
@@ -1056,11 +1026,6 @@
         },
         "/v1/dentists": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "List of dentists",
                 "consumes": [
                     "application/json"
@@ -1099,11 +1064,6 @@
         },
         "/v1/dentists/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get one dentist by ID",
                 "consumes": [
                     "application/json"
@@ -1718,11 +1678,6 @@
         },
         "/v1/services/groups": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get servivies groups",
                 "consumes": [
                     "application/json"
@@ -1810,11 +1765,6 @@
         },
         "/v1/services/groups/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get servivies group",
                 "consumes": [
                     "application/json"
@@ -1962,11 +1912,6 @@
         },
         "/v1/services/{group_id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get servivies by group id",
                 "consumes": [
                     "application/json"
